k8s/dev/dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-lightning-dev-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-lightning-dev-service
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: django-lightning-dev-service
  labels:
    app: django-lightning-dev
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: django-lightning-dev
